--- a/src/dusk/Makefile
+++ b/src/dusk/Makefile
@@ -39,6 +39,7 @@ bDEBUG2		:= 0	# Generate debug info (bDEBUG2? Not a full DEBUG flag. Yet)
 CBASE   := $(INCLUDE) -Wall -fno-strict-aliasing #-fno-tree-loop-optimize
 CBASE	+= -O2
 CBASE	+= $(DEPFLAGS)
+CBASE	+= -Werror=implicit-function-declaration
 
 RCFLAGS := $(CBASE) $(RARCH)
 ICFLAGS := $(CBASE) $(IARCH) -mlong-calls #-fno-gcse
