--- a/demo/Fountain2/Makefile
+++ b/demo/Fountain2/Makefile
@@ -25,7 +25,7 @@ INCFLAGS := -I$(DUSK_DIR)/include -I$(DEVKITPRO)/libtonc/include
 LIBFLAGS := -L$(DUSK_DIR)/lib -ldusk -L$(DEVKITPRO)/libtonc/lib -ltonc
 ASFLAGS	:= -mthumb-interwork
 CFLAGS	:= $(ARCH) -Wall -fno-strict-aliasing -mcpu=arm7tdmi -mtune=arm7tdmi $(INCFLAGS) $(LIBFLAGS)
-LDFLAGS	:= $(ARCH) $(SPECS) $(LIBFLAGS)
+LDFLAGS	:= $(ARCH) $(SPECS) $(LIBFLAGS) -Wl,-Map,$(TITLE).map
 
 DUSK_MKFLAGS :=
 
